# orbital-simulator

./: .clang-tidy  .gitignore  README.md  data.json  imgui.ini  meson.build  todo.md
include/: common.hpp  util.hpp
include/components/: body.hpp  camera.hpp  color.hpp  follow_target.hpp  force.hpp  name.hpp  pos.hpp  tracer.hpp  vel.hpp
include/systems/: camera_system.hpp  gui_system.hpp  physics_system.hpp  render_system.hpp  save_load_system.hpp
include/utils/: camera_utils.hpp
src/: main.cpp  util.cpp
src/components/: body.cpp  color.cpp  name.cpp  pos.cpp  vel.cpp
src/systems/: camera_system.cpp  gui_system.cpp  physics_system.cpp  render_system.cpp  save_load_system.cpp
src/utils/: camera_utils.cpp
